Фикс согласно ревью 2. Поправил updateItem() и Main.